<?xml version="1.0"?>
<package format="2">
  <name>mabi_load_identification</name>
  <version>0.1.0</version>
  <description>The mabi_highlevel_controller package</description>
  <author email="jiangyi@student.ethz.ch">Yifan Jiang</author>
  <maintainer email="martiwer@mavt.ethz.ch">Martin Wermelinger</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>any_node</depend>
  <depend>any_measurements</depend>
  <depend>any_measurements_ros</depend>
  <depend>mabi_description</depend>
  <depend>mabi_model</depend>
  <depend>mabi_roco</depend>
  <depend>cosmo_ros</depend>
  <depend>kindr_ros</depend>
  <depend>message_logger</depend>
  <depend>parameter_handler_ros</depend>
  <depend>roco</depend>
  <depend>rocoma_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>mabi_joint_actuator</depend>
  <depend>mabi_joint_actuator_msgs</depend>
  <depend>mabi_joint_actuator_cosmo</depend>
  <depend>mabi_lowlevel_controller</depend>
  <depend>mabi_trajectory_generator</depend>
  <depend>mabi_control_utils</depend>
  <depend>signal_logger</depend>
  <depend>signal_logger_ros</depend>
  <depend>signal_logger_std</depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>

</package>
